@@ -1,3 +1,9 @@
+2013-07-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCset.h,
+	  src/SDCCset.c:
+	  Improve const use in sets.
+
 2013-07-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCbitv.h,
